# thread-bot

./: CMakeLists.txt  README.md  plot.py
docs/: AMPERSAND.md  THREADING.md  constref_in_out.md  notes.md
src/: main.cpp  reporter_worker.cpp  reporter_worker.hpp  robot.cpp  robot.hpp  robot_worker.cpp  robot_worker.hpp  shared_context.hpp  types.hpp  worker.cpp  worker.hpp  world.cpp  world.hpp  world_worker.cpp  world_worker.hpp
